# rat-trig

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  IFLOW.md  README.md  mypy.ini  note.md  setup.cfg  setup.py
.github/workflows/: ci.yml  pythonapp.yml
cpp_ai/: .gitignore  CMakeLists.txt  README.md  xmake.lua
cpp_ai/.xmake/linux/x86_64/: xmake.conf
cpp_ai/.xmake/linux/x86_64/cache/: config  detect  history  option  toolchain
cpp_ai/examples/: basic_usage.cpp  fibonacci.cpp
cpp_ai/include/rat_trig/: trigonom.hpp
cpp_ai/src/: trigonom.cpp
cpp_ai/tests/: test_cross.cpp  test_dot.cpp  test_quad.cpp  test_spread.cpp  test_spread_law.cpp  test_trigonom.cpp  test_triple_quad_formula.cpp
docs/: conf.py  index.md
experimental/: draw_farey_circles_demo.ipynb  draw_farey_circles_demo.py  draw_gasket_demo.py  rational_smith_chart.py
experiments/: test.py
requirements/: test.txt
rust_ai/: .gitignore  Cargo.toml  LICENSE  README.md  test_spread_law  test_spread_law.rs
rust_ai/examples/: basic_usage.rs
rust_ai/src/: lib.rs
src/rat_trg/: trigonom.py
src/rat_trig/: __init__.py  skeleton.py  trigonom.py
tests/: conftest.py  test_cross.py  test_dot.py  test_quad.py  test_skeleton.py  test_spread.py  test_spread_law.py  test_trig_properties.py  test_trigonom.py  test_triple_quad_formula.py  test_vector_properties.py
